--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,7 @@ nav a {
     color: #fff;
     font-weight: bold;
     font-size: 20px; /* Larger font size */
-    transition: color 0.3s ease; /* Smooth color transition */
+    transition: color 0.5s ease; /* Smooth color transition */
 }
 
 nav a:hover {
@@ -48,8 +48,9 @@ nav a:hover {
 }
 
 section {
-    flex: 1; /* Expand and fill remaining space */
+    flex: 0;
     padding: 40px 20px;
+    margin: 0;
     width: 100%;
     box-sizing: border-box;
     text-align: left; /* Align text to the left */
@@ -76,9 +77,10 @@ footer a {
     nav {
         margin-top: 10px;
     }
-
+    
     nav ul {
-        flex-direction: column;
+        flex-direction: row; /* Change flex direction to row */
+        flex-wrap: wrap; /* Allow items to wrap to the next line */
     }
 
     nav li {
