--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,13 +57,13 @@ section {
 }
 
 footer {
-    background-color: #333; /* Dark grey background for the footer */
-    color: #fff; /* Text color for the footer */
+    background-color: #333;
+    color: #fff;
     text-align: center;
     padding: 10px 0;
     width: 100%;
-    margin-top: auto; /* Push the footer up, same distance as the navbar from the top */
-    margin-bottom: 20px; /* Add some space at the bottom of the footer */
+    position: fixed;
+    bottom: 0;
 }
 
 footer a {
@@ -77,7 +77,7 @@ footer a {
     nav {
         margin-top: 10px;
     }
-    
+
     nav ul {
         flex-direction: row; /* Change flex direction to row */
         flex-wrap: wrap; /* Allow items to wrap to the next line */
