--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -16,11 +16,10 @@ body {
 
 /* Header styles*/
 header {
-    position: fixed;
     width: 100%;
+    padding: 20px 0;
     text-align: center;
-    max-width: 800px;
-    z-index: 1000;
+    background-color: transparent;
 }
 
 /* nav styles*/ 
@@ -32,7 +31,7 @@ nav ul {
 }
 
 nav li {
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 nav a,
@@ -43,7 +42,6 @@ nav a,
     padding: 5px;
     background-color: transparent;
     border-radius: 5px;
-    cursor: pointer;
     transition: background-color 0.3s ease; 
 }
 
@@ -53,10 +51,13 @@ nav a:hover,
     transition: 0.3s;
 }
 
+label {
+    cursor: pointer;
+}
 /* section styles*/
 section {
     flex: 0;
-    padding: 80px 20px; /* Increase the top padding to make room for the fixed header */
+    padding: 40px 20px;
     box-sizing: border-box;
     text-align: left;
 }
@@ -84,7 +85,6 @@ footer {
         margin-bottom: 10px;
     }
 
-    section {
-        padding-top: 120px; /* Adjust the top padding for smaller screens */
-    }
 }
+
+
