--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -20,8 +20,8 @@ body {
 header {
     position: fixed;
     width: 100%;
+    background-color: white;
     text-align: center;
-    background-color: inherit;
     border-bottom: 1px solid #6868686c;
     max-width: 800px;
 }
@@ -38,14 +38,11 @@ nav li {
     margin-right: 20px;
 }
 
-nav a,
-.color-picker-label{
+nav a {
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
-    padding: 5px;
     background-color: transparent;
-    border-radius: 5px;
     transition: background-color 0.3s ease; 
 }
 
@@ -53,15 +50,18 @@ a {
     color: #000;
 }
 
+/*
 nav a:hover,
 .color-picker-label:hover {
     background-color: rgba(126, 126, 126, 0.436);
     transition: 0.3s;
 }
+*/
 
 label {
     cursor: pointer;
 }
+
 /* section styles*/
 section {
     flex: 0;
