--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,51 +1,55 @@
 /* body styles*/
-body, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
+body,
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Fira Code', monospace;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
-    min-height: 100vh;
-    max-width: 800px;
-    margin: 0 auto;
-    border-left: 1px solid #6868686c;
-    border-right: 1px solid #6868686c;
+  font-family: "Fira Code", monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 100vh;
+  max-width: 800px;
+  margin: 0 auto;
+  border-left: 1px solid #6868686c;
+  border-right: 1px solid #6868686c;
 }
 
 /* Header styles*/
 header {
-    position: fixed;
-    width: 100%;
-    background-color: white;
-    text-align: center;
-    border-bottom: 1px solid #6868686c;
-    max-width: 800px;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  text-align: center;
+  border-bottom: 1px solid #6868686c;
+  max-width: 800px;
 }
 
-/* nav styles*/ 
+/* nav styles*/
 nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: flex-start;
-    padding: 0 20px;
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0 20px;
 }
 
 nav li {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 nav a {
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 a {
-    color: #000;
+  color: #000;
 }
 
 /*
@@ -57,41 +61,38 @@ nav a:hover,
 */
 
 label {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* section styles*/
 section {
-    flex: 0;
-    padding: 40px 20px;
-    box-sizing: border-box;
-    text-align: left;
-    padding-top: 130px;
+  flex: 0;
+  padding: 40px 20px;
+  box-sizing: border-box;
+  text-align: left;
+  padding-top: 130px;
 }
 
 /* footer styles */
 footer {
-    text-align: center;
-    width: 100%;
-    margin-top: auto;
-    margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  margin-top: auto;
+  margin-bottom: 20px;
 }
 
 /* Responsive Styles */
 @media only screen and (max-width: 768px) {
-    nav {
-        margin-top: 10px;
-    }
+  nav {
+    margin-top: 10px;
+  }
 
-    nav ul {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
+  nav ul {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
-    nav li {
-        margin-bottom: 10px;
-    }
-
+  nav li {
+    margin-bottom: 10px;
+  }
 }
-
-
