--- a/testing/styles.css
+++ b/testing/styles.css
@@ -1,90 +1,90 @@
 body {
-    background: white;
+  background: white;
 }
 
 .dark-mode {
-    background-color: #333;
-    color: #fff;
+  background-color: #333;
+  color: #fff;
 }
 
 .orange-mode {
-    background-color: #ff7f00;
-    color: #fff;
+  background-color: #ff7f00;
+  color: #fff;
 }
 
 .blue-mode {
-    background-color: #3498db;
-    color: #fff;
+  background-color: #3498db;
+  color: #fff;
 }
 
 .green-mode {
-    background-color: #2ecc71;
-    color: #fff;
+  background-color: #2ecc71;
+  color: #fff;
 }
 
 .purple-mode {
-    background-color: #9b59b6;
-    color: #fff;
+  background-color: #9b59b6;
+  color: #fff;
 }
 
 .pink-mode {
-    background-color: #e91e63;
-    color: #fff;
+  background-color: #e91e63;
+  color: #fff;
 }
 
 .red-mode {
-    background-color: #e74c3c;
-    color: #fff;
+  background-color: #e74c3c;
+  color: #fff;
 }
 
 .yellow-mode {
-    background-color: #f1c40f;
-    color: #333;
+  background-color: #f1c40f;
+  color: #333;
 }
 
 .teal-mode {
-    background-color: #008080;
-    color: #fff;
+  background-color: #008080;
+  color: #fff;
 }
 
 .brown-mode {
-    background-color: #8b4513;
-    color: #fff;
+  background-color: #8b4513;
+  color: #fff;
 }
 
 .dropdown {
-    display: inline-block;
+  display: inline-block;
 }
 
 .dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
